kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: developer
spec:
  type: LoadBalancer
  selector:
    app: developer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
